--- a/arthur.html
+++ b/arthur.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
 
-    <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
+    <script src="assets/js/jquery.js" charset="utf-8"></script>
     <script src="assets/js/arthur.js" charset="utf-8"></script>
 
     <style media="screen">
@@ -39,49 +39,7 @@
       text-decoration: line-through;
     }
 
-/*    .rollover{
-      color:red;
-    }
 
-    .col {
-  width: 50%;
-  height:100vh;
-  position:fixed;
-}
-
-.left {
-  left:0;
-  top:15vh;
-  overflow: scroll;
-  color: hotpink;
-
-}
-
-.right {
-  left:50%;
-  top:15vh;
-
-}
-
-.content {
-  padding: 30px;
-  width: 520px;
-  font-family: arial;
-  font-size: 30px;
-  margin-left: 50px;
-}
-
-.header {
-  font-size: 30px;
-
-  text-align: center;
-}
-
-a{
-  text-decoration: none;
-  color: blue;
-
-}*/
 
 .rollover{
   color: aqua;
@@ -127,29 +85,27 @@ a{
   transition: all 2s;
 }
 
-.chan__image{
+.arthur__image{
   top:50px;
   left:740px;
-  width: 350px;
-  height:300px;
 }
 
-.political__image{
-  top:70px;
-  left:20px;
+.twitter__image{
+  top:50px;
+  left:40px;
+
 }
 
-.pepper__image{
-  top:310px;
-  left:600px;
-  width: 550px;
-  height:400px;
+.frasier__image{
+  top:50px;
+  left:740px;
 }
 
-.american__image{
-  top:150px;
-  left:700px;
+.images{
+  margin-left: 170px;
 }
+
+
 
 .flash {
    animation-name: flash;
@@ -206,7 +162,7 @@ a{
 
     <strong><p>I was one of those kids who didn’t have cable.</p></strong>
 
-    <p>For this reason, my moral compass and world view were shaped by maybe seven channels of public TV. This included the morning news; the sitcom Frasier; and most-influentially PBS's Arthur, a children's program that, no matter the time of day, would be discovered airing halfway through an episode. The show's pervasiveness no doubt left an impression on kids of the '90s who, like me, got their diet of wholesome life lessons and appreciation of family from a precocious aardvark with on-trend eyewear.
+    <p>For this reason, my moral compass and world view were shaped by maybe seven channels of public TV. This included the morning news; the sitcom Frasier; and most-influentially PBS's <span class="rollover arthur">Arthur</span>, a children's program that, no matter the time of day, would be discovered airing halfway through an episode. The show's pervasiveness no doubt left an impression on kids of the '90s who, like me, got their diet of wholesome life lessons and appreciation of family from a precocious aardvark with on-trend eyewear.
 
       <br>
       <br>
@@ -218,26 +174,39 @@ These kids grew up to be the content creators and memesmiths of the internet tod
 
 
 And the internet just took it and ran:
+    </div>
+</div>
 
 <br>
 <br>
+<div class="images">
 
+<img src="assets/images/arthur1.jpg" alt="" style="width:350px; height:300px;">
+<img src="assets/images/arthur2.webp" alt="" style="width:350px; height:300px;">
+<img src="assets/images/arthur3.jpg" alt="" style="width:350px; height:300px;">
+
+</div>
+
+<br>
+<br>
+<div class="col left">
+  <div class="content">
 The fist originated from one of the darkest episodes of Arthur, in which the young bespectacled aardvark punches his sister DW for breaking his toy airplane. The clip was the kernel of a separate meme for six years before inspiring the Arthur fist. Fun fact: the episode was given a rare TV-Y7 rating for cartoon violence! The only other Arthur episodes with the TV-Y7 rating are "Arthur's Underwear" and "Attack of the Turbo Tibble Twins," which based on the title alone, I am bumping to the top of my to-watch list.
 
 <br>
 <br>
 
-It's important to note that even before the fist meme, Arthur had already been engrained in the pop culture conversation, from the ArthurScenes Twitter account to Chance the Rapper (incorrectly) name-dropping him in "Ultralight Beam." ("I been this way since Arthur was anteater.") This is all just a convoluted way to say, "Look at these other hella dank Arthur memes."
+It's important to note that even before the fist meme, Arthur had already been engrained in the pop culture conversation, from the <a href="https://twitter.com/ArthurScenes"><span class="rollover twitter">ArthurScenes</span></a> Twitter account to Chance the Rapper (incorrectly) name-dropping him in "Ultralight Beam." ("I been this way since Arthur was anteater.") This is all just a convoluted way to say, "Look at these other hella dank Arthur memes."
 
 <br>
 <br>
 
-The Arthur fist meme is now a full four days old, which means we as an internet must look to the future, and search through other public broadcasting television shows for the next great meme. May I suggest Frasier?
+The Arthur fist meme is now a full four days old, which means we as an internet must look to the future, and search through other public broadcasting television shows for the next great meme. May I suggest <span class="rollover frasier">Frasier?</span>
 
 <br>
 <br>
 
-
+  </div>
 
 
 
@@ -254,10 +223,10 @@ The Arthur fist meme is now a full four days old, which means we as an internet 
 
 </div>>-->
 
-<img class="rotate chan__image"src="funny.jpg" alt="">
-<img class="blur political__image"src="political.jpg" alt="">
-<img class="blur pepper__image"src="pepper.jpg" alt="">
-<img class="rotate baby__image"src="baby.jpg" alt="">
+<img class="rotate arthur__image"src="assets/images/arthur.png" alt="">
+<img class="blur twitter__image"src="assets/images/cast.png" alt="">
+<img class="rotate frasier__image"src="assets/images/frasier.jpg" alt="">
+
 
 
 
