--- a/doge.html
+++ b/doge.html
@@ -144,6 +144,20 @@
   left:700px;
   }
 
+  .wow__image{
+  top:150px;
+  left:700px;
+  }
+
+  .such__image{
+  top:150px;
+  left:700px;
+  }
+  .shiba__image{
+  top:150px;
+  left:700px;
+  }
+
   .flash {
    animation-name: flash;
     animation-duration: 0.5s;
@@ -220,6 +234,9 @@ But the dog that most often represents the doge meme nearly died a few years ago
 
 
 <img class="rotate doge__image"src="assets/images/doge.jpg" alt="">
+<img class="rotate wow__image"src="assets/images/wow.jpg" alt="">
+<img class="rotate such__image"src="assets/images/such.jpg" alt="">
+<img class="rotate shiba__image"src="assets/images/shiba.jpg" alt="">
 <img class="rotate japanese__image"src="assets/images/japan_meme.jpg" alt="">
 <img class="rotate most__image"src="assets/images/dinoshark.jpg" alt="">
 
