--- a/success.html
+++ b/success.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title></title>
 
-    <script src="jquery-3.2.0.min.js" charset="utf-8"></script>
-    <script src="success.js" charset="utf-8"></script>
+    <script src="assets/js/jquery.js" charset="utf-8"></script>
+    <script src="assets/js/success.js" charset="utf-8"></script>
 
     <style media="screen">
 
@@ -127,29 +127,29 @@ a{
   transition: all 2s;
 }
 
-.chan__image{
+.sandcastles__image{
   top:50px;
   left:740px;
-  width: 350px;
-  height:300px;
+
 }
 
-.political__image{
-  top:70px;
-  left:20px;
+.winning__image{
+  top:50px;
+  left:740px;
 }
 
-.pepper__image{
-  top:310px;
-  left:600px;
-  width: 550px;
-  height:400px;
+.ryan__image{
+  top:50px;
+  left:40px;
+  width: 400px;
+  height: 600px;
+
 }
 
-.american__image{
-  top:150px;
-  left:700px;
+.images{
+  margin-left: 170px;
 }
+
 
 .flash {
    animation-name: flash;
@@ -167,86 +167,6 @@ a{
 
 * {box-sizing:border-box}
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-.mySlides {
-    display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor:pointer;
-  height: 13px;
-  width: 13px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
 
 @-webkit-keyframes fade {
   from {opacity: .4}
@@ -276,53 +196,32 @@ a{
 <div class="col left">
   <div class="content">
 
-    <strong><p>The very <span class="rollover pepper">best</span> of the Success Kid meme shows that age is only a number as this smug little toddler accomplishes things you could only dream about. Complete with a "take that" smirk and a fist full of sand, the Success Kid, or Success Baby, owns everyone he comes in contact, is inventive and unbelievably lucky. His #winning puts even Charlie Sheen to shame. He is just that good, and he's only just a toddler.</p></strong>
+    <strong><p>The very best of the Success Kid meme shows that age is only a number as this smug little toddler accomplishes things you could only dream about. Complete with a "take that" smirk and a fist full of sand, the Success Kid, or Success Baby, owns everyone he comes in contact, is inventive and unbelievably lucky. His <span class="rollover winning">#winning</span> puts even Charlie Sheen to shame. He is just that good, and he's only just a toddler.</p></strong>
 
-    <p>The Success Kid meme started as an innocent photo taken by a mother of her son playing on the beach in 2007. Laney Griner photographed the then 11-month-old Sammy and posted the image on her Flickr account with the caption "Why I oughta..." Fast forward a few months and the image, which was since photoshopped to include a second child and the caption of "I hate sandcastles," began appearing on social networking sites like MySpace and StumbleUpon.
+    <p>The Success Kid meme started as an innocent photo taken by a mother of her son playing on the beach in 2007. Laney Griner photographed the then 11-month-old Sammy and posted the image on her Flickr account with the caption "Why I oughta..." Fast forward a few months and the image, which was since photoshopped to include a second child and the caption of <span class="rollover sandcastles">"I hate sandcastles,"</span> began appearing on social networking sites like MySpace and StumbleUpon.
 
       <br>
       <br>
 
 Internet users and Redditers especially, took notice and turned Sammy's smug mug into a full blown meme. They placed his image on a blue shaded background image meme template, leaving room for captions above and below the photo. With this move, plus numerous iterations of the overly successful captions, the Success Kid meme was born.
 
-<br>
-<br>
+<div class="images">
 
-Success Kid shows that he has impeccable timing, can handle anything and just possibly may grow up to be Ryan Gosling. Take his nose and he'll take it right back. He's an overachiever from birth and he's going to tell you all about how awesome he is. What a little brat.</p>
+<img src="assets/images/success1.jpg" alt="" style="width:350px; height:300px;">
+<img src="assets/images/success2.jpg" alt="" style="width:350px; height:300px;">
+<img src="assets/images/success3.jpg" alt="" style="width:350px; height:300px;">
 
-
-
-
-
-    <div class="slideshow-container">
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="drink.jpg" style="width:100%">
-    <div class="text">SUCCESS KID</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="dad.jpg" style="width:100%">
-    <div class="text">SUCCESS KID</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="fridge.jpg" style="width:100%">
-    <div class="text">SUCCESS KID</div>
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
+
+<br>
 <br>
 
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+Success Kid shows that he has impeccable timing, can handle anything and just possibly may grow up to be <span class="rollover ryan">Ryan Gosling.</span> Take his nose and he'll take it right back. He's an overachiever from birth and he's going to tell you all about how awesome he is. What a little brat.</p>
+
+
+
+
+
 
 
 
@@ -339,10 +238,9 @@ Success Kid shows that he has impeccable timing, can handle anything and just po
 
 </div>>-->
 
-<img class="rotate chan__image"src="funny.jpg" alt="">
-<img class="blur political__image"src="political.jpg" alt="">
-<img class="blur pepper__image"src="pepper.jpg" alt="">
-<img class="rotate baby__image"src="baby.jpg" alt="">
+<img class="rotate sandcastles__image"src="assets/images/sandcastles.jpg" alt="">
+<img class="blur winning__image"src="assets/images/winning.jpg" alt="">
+<img class="blur ryan__image"src="assets/images/ryan.jpg" alt="">
 
 
 
