--- a/success.html
+++ b/success.html
@@ -39,49 +39,11 @@
       text-decoration: line-through;
     }
 
-/*    .rollover{
-      color:red;
+    .nav a:active{
+      text-decoration: line-through;
+      color: aqua;
     }
 
-    .col {
-  width: 50%;
-  height:100vh;
-  position:fixed;
-}
-
-.left {
-  left:0;
-  top:15vh;
-  overflow: scroll;
-  color: hotpink;
-
-}
-
-.right {
-  left:50%;
-  top:15vh;
-
-}
-
-.content {
-  padding: 30px;
-  width: 520px;
-  font-family: arial;
-  font-size: 30px;
-  margin-left: 50px;
-}
-
-.header {
-  font-size: 30px;
-
-  text-align: center;
-}
-
-a{
-  text-decoration: none;
-  color: blue;
-
-}*/
 
 .rollover{
   color: aqua;
@@ -205,6 +167,10 @@ a{
 
 Internet users and Redditers especially, took notice and turned Sammy's smug mug into a full blown meme. They placed his image on a blue shaded background image meme template, leaving room for captions above and below the photo. With this move, plus numerous iterations of the overly successful captions, the Success Kid meme was born.
 
+</div>
+
+</div>
+
 <div class="images">
 
 <img src="assets/images/success1.jpg" alt="" style="width:350px; height:300px;">
@@ -213,6 +179,9 @@ Internet users and Redditers especially, took notice and turned Sammy's smug mug
 
 </div>
 
+
+<div class="col left">
+  <div class="content">
 <br>
 <br>
 
@@ -221,7 +190,7 @@ Success Kid shows that he has impeccable timing, can handle anything and just po
 
 
 
-
+</div>
 
 
 
