--- a/contents.html
+++ b/contents.html
@@ -39,6 +39,11 @@
 	      text-decoration: line-through;
 	    }
 
+			.nav a:active{
+				text-decoration: line-through;
+				color: aqua;
+			}
+
 
 
 p{
@@ -131,7 +136,7 @@ left:740px;
 .success__image{
 	top:70px;
 	left:740px;
-	
+
 }
 
 .arthur__image{
@@ -157,7 +162,53 @@ left:740px;
 	padding-right: 650px;
 }
 
+.thumbnailarthur{
+  display: inline-block;
+  width: 20px;
+  padding: 0px;
+  position: absolute;
+  transition: 1s;
 
+}
+
+.thumbnailarthur:hover {
+    width:200px;
+    transition: 1s ease-in-out;
+    margin: auto;
+    position: absolute;
+}
+
+.thumbnailsuccess{
+  display: inline-block;
+  width: 20px;
+  padding: 0px;
+  position: absolute;
+  transition: 1s;
+
+}
+
+.thumbnailsuccesskid:hover {
+    width:200px;
+    transition: 1s ease-in-out;
+    margin: auto;
+    position: absolute;
+}
+
+.thumbnaildoge{
+  display: inline-block;
+  width: 20px;
+  padding: 0px;
+  position: absolute;
+  transition: 1s;
+
+}
+
+.thumbnaildoge:hover {
+    width:200px;
+    transition: 1s ease-in-out;
+    margin: auto;
+    position: absolute;
+}
 
 		</style>
 	</head>
@@ -177,12 +228,14 @@ left:740px;
 	<a href="doge.html"><span class="rollover doge"><h1>DOGE</h1></span></a>
 </div>
 
+
+
 <div class="title2">
-	<span class="rollover success"><h1>SUCCESS KID</h1></span>
+	<a href="success.html"><span class="rollover success"><h1>SUCCESS KID</h1></span></a>
 </div>
 
 <div class="title3">
-	<span class="rollover arthur"><h1>ARTHUR</h1></span>
+	<a href="arthur.html"><span class="rollover arthur"><h1>ARTHUR</h1></span></a>
 </div>
 
 
