--- a/arthur.html
+++ b/arthur.html
@@ -86,6 +86,11 @@ a:hover{
   color: aqua;
 }
 
+.backbutton{
+  -webkit-transform: rotate(-90deg);
+
+}
+
 .rotate{
   position:fixed;
   visibility: hidden;
@@ -213,9 +218,13 @@ a:hover{
 
 
 <strong><h1 class="flash">THE ARTHUR FIST MEME IS THE BEST NEW MEME</h1></strong>
+<div class="backbutton">
+  PREVIOUS
+</div>
 
-
-
+<div class="nextbutton">
+  NEXT
+</div>
 
 <div class="col left">
   <div class="content">
@@ -272,16 +281,7 @@ The Arthur fist meme is now a full four days old, which means we as an internet 
 
 </div>
 
-<!--<div class="col right">
 
-<a name="obesity-meme"><img src="./obesity-meme.jpg" alt="" style="margin-left:50px;margin-top:50px;"></a>
-<a name="political"><img src="./political.png" alt="" style="margin-left:50px;margin-top:50px;"></a>
-<a name="Pepper"><img src="./pepper.jpg" alt="" style="margin-left:50px;margin-top:50px;"></a>
-<a name="Funny"><img src="./Funny.jpg" alt="" style="padding-bottom:20px;margin-left:50px;margin-top:50px;"></a
-
-
-
-</div>>-->
 
 <img class="blur twitter__image"src="assets/images/cast.png" alt="">
 <img class="rotate frasier__image"src="assets/images/frasier.jpg" alt="">
