--- a/contents.html
+++ b/contents.html
@@ -53,8 +53,8 @@ p{
   margin-left: 300px;
   white-space: nowrap;
   overflow: hidden;
-  width: 30em;
-  animation: type 4s steps(60, end);
+  width: 100em;
+  animation: type 7s steps(60, end);
 }
 
 p:nth-child(2){
@@ -100,115 +100,7 @@ font-size: 30px;
 .rollover:hover{
 text-decoration: line-through;
 }
-.blur{
-position:fixed;
-opacity:0;
-filter: blur();
-pointer-events:none;
-transition: all 2s;
-}
 
-.blur.showme{
-opacity: 1;
-filter: blur(0px);
-transition: all 2s;
-}
-
-.rotate{
-position:fixed;
-visibility: hidden;
-transform: scaleX(0)rotate(0deg);
-pointer-events:none;
-transition: all 2s;
-}
-
-.rotate.showme{
-visibility: visible;
-transform: scaleX(1)rotate(360deg);
-transition: all 2s;
-}
-
-.doge__image{
-top:70px;
-left:740px;
-
-}
-.success__image{
-	top:70px;
-	left:740px;
-
-}
-
-.arthur__image{
-top:70px;
-left:740px;
-
-}
-
-.title1{
-	margin-left: 1300px;
-
-}
-
-.title2{
-	margin-left: 1700px;
-	margin-top: -185px;
-
-}
-
-.title3{
-	margin-left: 2250px;
-	margin-top: -265px;
-	padding-right: 650px;
-}
-
-.thumbnailarthur{
-  display: inline-block;
-  width: 20px;
-  padding: 0px;
-  position: absolute;
-  transition: 1s;
-
-}
-
-.thumbnailarthur:hover {
-    width:200px;
-    transition: 1s ease-in-out;
-    margin: auto;
-    position: absolute;
-}
-
-.thumbnailsuccess{
-  display: inline-block;
-  width: 20px;
-  padding: 0px;
-  position: absolute;
-  transition: 1s;
-
-}
-
-.thumbnailsuccesskid:hover {
-    width:200px;
-    transition: 1s ease-in-out;
-    margin: auto;
-    position: absolute;
-}
-
-.thumbnaildoge{
-  display: inline-block;
-  width: 20px;
-  padding: 0px;
-  position: absolute;
-  transition: 1s;
-
-}
-
-.thumbnaildoge:hover {
-    width:200px;
-    transition: 1s ease-in-out;
-    margin: auto;
-    position: absolute;
-}
 
 		</style>
 	</head>
@@ -222,28 +114,27 @@ left:740px;
 
 <h1>MEMES:</h1>
 
-<p>	scroll through the best of the best --></p>
-
-<div class="title1">
-	<a href="doge.html"><span class="rollover doge"><h1>DOGE</h1></span></a>
-</div>
-
-
-
-<div class="title2">
-	<a href="success.html"><span class="rollover success"><h1>SUCCESS KID</h1></span></a>
-</div>
-
-<div class="title3">
-	<a href="arthur.html"><span class="rollover arthur"><h1>ARTHUR</h1></span></a>
-</div>
+<p>
+<i>noun</i>
+<br>
+<br>
+	1. an element of a culture or system of behaviour passed from one individual
+<br>
+	to another by imitation or other non-genetic means.
+	<br>
+	<br>
+	2. an image, video, piece of text, etc., typically humorous in nature, that
+	<br>
+is copied and spread rapidly by Internet users, often with slight variations.
+</p>
 
 
 
 
-<img class="rotate doge__image"src="assets/images/doge.jpg" alt="">
-<img class="blur success__image"src="assets/images/successkid.jpg" alt="">
-<img class="rotate arthur__image"src="assets/images/arthur.jpg" alt="">
+
+<img src="assets/images/doge.jpg" alt="" style="margin-left: 1500px; margin-top: -170px; width: 300px;">
+<img src="assets/images/successkid.jpg" alt="" style="margin-left: 2000px; width: 400px;">
+<img src="assets/images/arthur.jpg" alt="" style="margin-left: 2500px; margin-top: -800px; width: 300px;">
 
 
 
