--- a/dpub/index.html
+++ b/dpub/index.html
@@ -1,74 +1,37 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Lucy Curtis</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-<style media="screen">
-a:link {
-	color: white;
-	text-decoration: none;
-}
-a:visited {
-    color: white;
-		text-decoration: none;
-}
-a:hover {
-    color: blue;
-		text-decoration: none;
-}
+  <head>
+    <meta charset="utf-8">
+    <title>Homepage</title>
+    <style media="screen">
 
-.links{
-	font-family: courier;
-	font-size: 25pt;
-	margin-left: 250px;
-	margin-top: 85px;
-	width: 400px;
-}
+    a{
+      text-decoration: none;
+      color:lightgrey;
+      font-family: arial;
+      margin-left: 700px;
+      margin-top: 400px;
+      font-size: 100px;
+    }
 
+    a:link {
+    	color: lightgrey;
+    	text-decoration: none;
+    }
+    a:visited {
+        color: lightgrey;
+    		text-decoration: none;
+    }
+    a:hover {
+        color: hotpink;
+    		text-decoration: none;
+    }
 
-html,body{
-	background-color: hotpink;
-}
+    </style>
+  </head>
+  <body>
 
-h1{
-	font-family: courier;
-	color: white;
-	margin-left: 500px;
-}
+<a href="index2.html">LUCY CURTIS</a>
 
-</style>
-	</head>
-	<body>
-
-<h1>Digital Publishing</h1>
-
-
-
-<ul>
-<div class="links">
-	<a href="homepage.html">15 VARIATIONS</a>
-</div>
-
-<div class="links">
-	<a href="levels/essay.html">ESSAY</a>
-</div>
-
-<div class="links">
-	<a href="project_2/index.html">REPOST</a>
-</div>
-
-<div class="links">
-	<a href="project_3.1/index.html">READER</a>
-</div>
-
-</ul>
-
-
-
-
-
-
-
-
-	</body>
+  </body>
 </html>
