--- a/dpub/index2.html
+++ b/dpub/index2.html
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Homepage</title>
-    <style media="screen">
+	<head>
+		<title>Lucy Curtis</title>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<style media="screen">
+a:link {
+	color: lightgrey;
+	text-decoration: none;
+}
+a:visited {
+    color: lightgrey;
+		text-decoration: none;
+}
+a:hover {
+    color: hotpink;
+		text-decoration: none;
+}
 
-      body{
-
-      }
-
-      .introduction{
-        display:inline-block;
-        width:400px;
-        margin-left: 20px;
-        margin-right: 20px;
-        vertical-align: top;
-      }
-
-      .nav{
-        display: inline-block;
-        width: 800px;
-      }
-    </style>
-  </head>
-  <body>
-
-    <h1>Lucy Curtis Homepage</h1>
-
-    <div class="introduction">
-
-      <h1>First Things First 2000</h1>
-      <p>We, the undersigned, are graphic designers, art directors and visual communicators who have been raised in a world in which the techniques and apparatus of advertising have persistently been presented to us as the most lucrative, effective and desirable use of our talents. Many design teachers and mentors promote this belief; the market rewards it; a tide of books and publications reinforces it.</p>
-
-    </div>
-<div class="nav">
+.links{
+	font-family: ARIAL;
+	font-size: 25pt;
+	color: lightgrey;
+	margin-top: 250px;
+	margin-left: 330px;
+}
 
 
 
-<a href="week_1/level1a.html">
-  <img src="assets/images/image1.jpeg" alt="">
+h1{
+	font-family: courier;
+	color: lightgrey;
+	margin-left: 500px;
+}
 
-</a>
+</style>
+	</head>
+	<body>
 
 
 
+<div class="links">
+	<a href="homepage.html">PROJECT ONE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
+	<a href="levels/essay.html">ESSAY</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+	<a href="project_2/index.html">PROJECT TWO</a>
 </div>
 
-<a href="index.html">Return to Index</a>
 
 
-  </body>
+
+
+
+
+
+
+
+
+
+	</body>
 </html>
