--- a/arthur.html
+++ b/arthur.html
@@ -13,13 +13,17 @@
    background-color: lightgrey;
  }*/
 
-    h1{
-      font-family: arial;
-      color:aqua;
-      font-size: 100px;
-      margin-top: ;
-      margin-left: 350px
-    }
+ h1{
+   font-family: arial;
+   font-size: 100px;
+   margin-left: 350px
+ }
+
+ h4{
+   font-family: arial;
+   margin-top: -40px;
+   margin-left: 350px
+ }
 
     .nav{
       font-size: 20px;
@@ -206,6 +210,42 @@ a:hover{
   to {opacity: 1}
 }
 
+.backbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  left: 2%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(-90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  right: 4%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
+
+.backbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
+
 
 
     </style>
@@ -216,15 +256,15 @@ a:hover{
 			<strong><a href="contents.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="arthur.html">FOUR</a></strong>
 		</div>
 
+    <a href="success.html" class="backbutton">back</a>
+    <a href="contents.html" class="nextbutton">next</a>
 
-<strong><h1 class="flash">THE ARTHUR FIST MEME IS THE BEST NEW MEME</h1></strong>
-<div class="backbutton">
-  PREVIOUS
-</div>
+<strong><h1 class="flash">THE ARTHUR <br>FIST MEME IS <br>THE BEST <br>NEW MEME</h1><h4 class="flash">Dami Lee</h4></strong>
 
-<div class="nextbutton">
-  NEXT
-</div>
+<br>
+<br>
+
+
 
 <div class="col left">
   <div class="content">
