--- a/success.html
+++ b/success.html
@@ -13,13 +13,17 @@
    background-color: lightgrey;
  }*/
 
-    h1{
-      font-family: arial;
-      color:aqua;
-      font-size: 100px;
-      margin-top: ;
-      margin-left: 350px
-    }
+ h1{
+   font-family: arial;
+   font-size: 100px;
+   margin-left: 350px
+ }
+
+ h4{
+   font-family: arial;
+   margin-top: -40px;
+   margin-left: 350px
+ }
 
     .nav{
       font-size: 20px;
@@ -140,6 +144,41 @@
   to {opacity: 1}
 }
 
+.backbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  left: 2%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(-90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  right: 4%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
+
+.backbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
 
 
     </style>
@@ -150,10 +189,14 @@
 			<strong><a href="contents.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="arthur.html">FOUR</a></strong>
 		</div>
 
-<strong><h1 class="flash">THE VERY BEST OF SUCCESS KID MEME</h1></strong>
+    <a href="doge.html" class="backbutton">back</a>
+    <a href="arthur.html" class="nextbutton">next</a>
+
+<strong><h1 class="flash">THE VERY BEST <br>OF SUCCESS <br>KID MEME</h1><h4 class="flash">Kel Varnsen</h4></strong>
 
 
-
+<br>
+<br>
 
 <div class="col left">
   <div class="content">
