--- a/doge.html
+++ b/doge.html
@@ -13,9 +13,13 @@
 
     h1{
       font-family: arial;
-      color:aqua;
       font-size: 100px;
-      margin-top: ;
+      margin-left: 350px
+    }
+
+    h4{
+      font-family: arial;
+      margin-top: -40px;
       margin-left: 350px
     }
 
@@ -151,6 +155,41 @@ blockquote{
   font-size: 25px;
 }
 
+.backbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  left: 2%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(-90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton{
+  position: fixed;
+  text-decoration: none;
+  color: hotpink;
+  right: 4%;
+  margin-top: 280px;
+  font-family: arial;
+  font-weight: bold;
+  font-size: 30px;
+  transform: rotate(90deg);
+  letter-spacing: 3px;
+}
+
+.nextbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
+
+.backbutton:hover{
+  color: aqua;
+  text-decoration: overline;
+}
 
 
     </style>
@@ -161,9 +200,13 @@ blockquote{
 			<strong><a href="contents.html">HOME</a>&nbsp;&nbsp;<a href="trial2.html">ONE</a> &nbsp;&nbsp; <a href="doge.html">TWO</a> &nbsp;&nbsp; <a href="success.html">THREE</a> &nbsp;&nbsp; <a href="arthur.html">FOUR</a></strong>
 		</div>
 
-<strong><h1 class="flash">THE INCREDIBLE TRUE STORY OF DOGE</h1></strong>
+    <a href="trial2.html" class="backbutton">back</a>
+    <a href="success.html" class="nextbutton">next</a>
 
+<strong><h1 class="flash">THE INCREDIBLE TRUE STORY <br>OF DOGE</h1><h4 class="flash">Connor Simpson</h4></strong>
 
+<br>
+<br>
 
 
 <div class="col left">
