--- a/arthur.html
+++ b/arthur.html
@@ -40,11 +40,11 @@
 
     .nav a:hover{
       color: aqua;
-      text-decoration: line-through;
+      text-decoration: overline;
     }
 
     .nav a:active{
-      text-decoration: line-through;
+      text-decoration: overline;
       color: aqua;
     }
 
@@ -64,7 +64,7 @@
 }
 
 .rollover:hover{
-  text-decoration: line-through;
+  text-decoration: overline;
 }
 .blur{
   position:fixed;
@@ -86,7 +86,7 @@ a{
 }
 
 a:hover{
-  text-decoration: line-through;
+  text-decoration: overline;
   color: aqua;
 }
 
