--- a/doge.html
+++ b/doge.html
@@ -38,11 +38,11 @@
 
     .nav a:hover{
       color: aqua;
-      text-decoration: line-through;
+      text-decoration: overline;
     }
 
-    .nav a:active{
-      text-decoration: line-through;
+    a:active{
+      text-decoration: overline;
       color: aqua;
     }
 
@@ -60,7 +60,7 @@
   }
 
   .rollover:hover{
-  text-decoration: line-through;
+  text-decoration: overline;
   }
   .blur{
   position:fixed;
