--- a/success.html
+++ b/success.html
@@ -40,11 +40,11 @@
 
     .nav a:hover{
       color: aqua;
-      text-decoration: line-through;
+      text-decoration: overline;
     }
 
     .nav a:active{
-      text-decoration: line-through;
+      text-decoration: overline;
       color: aqua;
     }
 
@@ -63,7 +63,7 @@
 }
 
 .rollover:hover{
-  text-decoration: line-through;
+  text-decoration: overline;
 }
 .blur{
   position:fixed;
