--- a/trial2.html
+++ b/trial2.html
@@ -40,7 +40,7 @@
 
     .nav a:hover{
       color: aqua;
-      text-decoration: line-through;
+      text-decoration: overline;
     }
 
 
@@ -59,7 +59,7 @@
 }
 
 .rollover:hover{
-  text-decoration: line-through;
+  text-decoration: overline;
 }
 .blur{
   position:fixed;
