--- a/contents.html
+++ b/contents.html
@@ -36,11 +36,11 @@
 
 	    .nav a:hover{
 	      color: aqua;
-	      text-decoration: line-through;
+	      text-decoration: overline;
 	    }
 
 			.nav a:active{
-				text-decoration: line-through;
+				text-decoration: overline;
 				color: aqua;
 			}
 
@@ -98,7 +98,7 @@ font-size: 30px;
 }
 
 .rollover:hover{
-text-decoration: line-through;
+text-decoration: overline;
 }
 
 
