--- a/doge.html
+++ b/doge.html
@@ -191,6 +191,9 @@ blockquote{
   text-decoration: overline;
 }
 
+.images{
+  margin-left: 170px;
+}
 
     </style>
   </head>
@@ -231,6 +234,19 @@ But the dog that most often represents the doge meme nearly died a few years ago
     <br>
     <br>
 
+  </div>
+</div>
+
+    <div class="images">
+
+    <img src="assets/images/so.jpg" alt="" style="width:350px; height:300px;">
+    <img src="assets/images/suchspin.gif" alt="" style="width:350px; height:300px;">
+    <img src="assets/images/firefox.jpg" alt="" style="width:350px; height:300px;">
+
+    </div>
+
+    <div class="col left">
+      <div class="content">
 <blockquote>
   <i>The furry face that launched a thousand quips nearly never made it to the web. Sato adopted Kabosu from an animal shelter in November, 2008, saving her from certain death. “She was a pedigreed dog from a puppy mill, and when the puppy mill closed down, she was abandoned along with 19 other Shiba dogs,” the teacher explained. “Some of them were adopted, but the rest of them were killed.”
 
@@ -249,9 +265,9 @@ But the dog that most often represents the doge meme nearly died a few years ago
 
 
 <img class="rotate wow__image"src="assets/images/wow.jpg" alt="">
-<img class="rotate such__image"src="assets/images/such.jpg" alt="">
+<img class="blur such__image"src="assets/images/such.jpg" alt="">
 <img class="rotate shiba__image"src="assets/images/shiba.jpg" alt="">
-<img class="rotate japanese__image"src="assets/images/japan_meme.png" alt="">
+<img class="blur japanese__image"src="assets/images/japan_meme.png" alt="">
 <img class="rotate most__image"src="assets/images/dinoshark.jpg" alt="">
 
 
