--- a/jkace/index.html
+++ b/jkace/index.html
@@ -1,52 +1,37 @@
-
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Lucy Curtis</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-		<style media="screen">
-		body{
-			background-color: aqua;
-		}
+  <head>
+    <meta charset="utf-8">
+    <title>Homepage</title>
+    <style media="screen">
 
-			h1{
-				margin-left: 350px;
-				margin-top: 250px;
-				font-family: arial;
-				font-size: 70px;
-			}
+    a{
+      text-decoration: none;
+      color:lightgrey;
+      font-family: arial;
+      margin-left: 700px;
+      margin-top: 400px;
+      font-size: 100px;
+    }
 
-			a {
-  			color: aqua;
-				text-decoration: none;
-			}
+    a:link {
+    	color: lightgrey;
+    	text-decoration: none;
+    }
+    a:visited {
+        color: lightgrey;
+    		text-decoration: none;
+    }
+    a:hover {
+        color: hotpink;
+    		text-decoration: none;
+    }
 
-			a:hover{
-				color: hotpink;
-				text-decoration: overline;
-			}
+    </style>
+  </head>
+  <body>
 
-			.flash {
-				color: hotpink;
-			   /*animation-name: flash;
-			    animation-duration: 0.5s;
-			    animation-timing-function: linear;
-			    animation-iteration-count: infinite;
-			    animation-direction: alternate;
-			    animation-play-state: running;
-			}
+<a href="index2.html">LUCY CURTIS</a>
 
-			@keyframes flash {
-			    from {color: hotpink;}
-			    to {color: aqua;}*/
-			}
-		</style>
-	</head>
-	<body>
-
-		<a href="contents.html"><strong><h1 class="flash">HOW YOU MEMING?</h1></a>
-
-
-
-	</body>
+  </body>
 </html>
