--- a/jkace/index.html
+++ b/jkace/index.html
@@ -1,37 +1,50 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Homepage</title>
-    <style media="screen">
+	<head>
+		<title>LUCY CURTIS</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<style media="screen">
+		.title{
+			font-family: helvetica;
+			font-weight: lighter;
+			font-size: 32px;
+			text-align: center;
+			margin-top: 250px;
+			margin-bottom: 300px;
+			letter-spacing: 20px;
+			line-height: 40px;
+		}
+		a{
+	font-family: helvetica;
+	}
+		a:link {
+		color: grey;
+		text-decoration: none;
+	}
 
-    a{
-      text-decoration: none;
-      color:lightgrey;
-      font-family: arial;
-      margin-left: 700px;
-      margin-top: 400px;
-      font-size: 100px;
-    }
+		a:visited {
+		color: black;
+		text-decoration: none;
+	}
 
-    a:link {
-    	color: lightgrey;
-    	text-decoration: none;
-    }
-    a:visited {
-        color: lightgrey;
-    		text-decoration: none;
-    }
-    a:hover {
-        color: hotpink;
-    		text-decoration: none;
-    }
+	a:hover {
+		color: grey;
+		text-decoration: line-through;
+	}
 
-    </style>
-  </head>
-  <body>
+	a:active {
+		color: grey;
+		text-decoration: none;
+	}
 
+		</style>
+	</head>
+
+
+	<body>
+		<div class="title">
 <a href="index2.html">LUCY CURTIS</a>
-
-  </body>
+		</div>
+</body>
 </html>
