--- a/jkace/index2.html
+++ b/jkace/index2.html
@@ -1,62 +1,53 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lucy Curtis</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-<style media="screen">
-a:link {
-	color: lightgrey;
-	text-decoration: none;
-}
-a:visited {
-    color: lightgrey;
+		<title>LUCY CURTIS</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<style media="screen">
+		.title{
+			text-align: center;
+			font-family: helvetica;
+			font-size: 25px;
+			margin-top: 250px;
+			line-height: 40px;
+		}
+		a{
+	font-family: helvetica;
+	}
+		a:link {
+		color: grey;
 		text-decoration: none;
-}
-a:hover {
-    color: hotpink;
+	}
+
+		a:visited {
+		color: black;
 		text-decoration: none;
-}
+	}
 
-.links{
-	font-family: ARIAL;
-	font-size: 25pt;
-	color: lightgrey;
-	margin-top: 250px;
-	margin-left: 330px;
-}
+	a:hover {
+		color: grey;
+		text-decoration: line-through;
+	}
 
+	a:active {
+		color: grey;
+		text-decoration: none;
+	}
 
-
-h1{
-	font-family: courier;
-	color: lightgrey;
-	margin-left: 500px;
-}
-
-</style>
+		</style>
 	</head>
+
+
 	<body>
-
-
-
-<div class="links">
-	<a href="homepage.html">PROJECT ONE</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-	<a href="levels/essay.html">PROJECT TWO</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-	<a href="project_2/index.html">PROJECT THREE</a>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-	</body>
+		<div class="title">
+<a href="one.html">PROJECT ONE</a>
+<br>
+<br>
+<a href="two.html">PROJECT TWO</a>
+<br>
+<br>
+<a href="three.html">PROJECT THREE</a>
+		</div>
+</body>
 </html>
