--- a/jkace/two.html
+++ b/jkace/two.html
@@ -27,8 +27,14 @@ body{
 <img src="food_photos/realcrepe.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
 <img src="food_photos/egg.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
 <img src="food_photos/egg2.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/egg3.jpg" alt=""style="width:850px;height:700px;margin-left:250px;padding:30px;">
-<img src="food_photos/egg2.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+<img src="food_photos/egg3.jpg" alt=""style="width:850px;height:700px;margin-left:400px;padding:30px;">
+<img src="food_photos/bbq1.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+<img src="food_photos/bbq2.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+<img src="food_photos/bbq3.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+<img src="food_photos/bbq.jpg" alt=""style="width:500px;height:700px;margin-left:400px;">
+<img src="food_photos/bbq5.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+<img src="food_photos/bbq7.gif" alt=""style="width:500px;height:800px;margin-left:400px;padding:30px;">
+
 
 		</div>
 </body>
