--- a/jkace/two.html
+++ b/jkace/two.html
@@ -5,11 +5,26 @@
 		<title>LUCY CURTIS</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<style media="screen">
-body{
+/*body{
 	width: 500px;
 
+}*/
+
+h1{
+	font-family: helvetica;
+	font-weight: lighter;
+	font-size: 32px;
+	letter-spacing: 10px;
+	margin-left: 420px;
 }
 
+h2{
+	font-family: helvetica;
+
+	letter-spacing: 10px;
+	margin-left: 410px;
+	margin-top: 250px;
+}
 	.images{
 		align-items: center;
 		margin left: 500px;
@@ -20,20 +35,21 @@ body{
 
 
 	<body>
+
+		<h1>JAPAN & SOUTH KOREA</h1>
+		<h2>F O O D, F O O D, F O O D !</h2>
+		<hr width="1" size="400" color="black"></hr>
+
 		<div class="images">
-<img src="food_photos/ramen.jpg" alt="" style="width:400px;height:700px;margin-left:450px;padding:30px;">
-<img src="food_photos/crepe1.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/crepe2.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/realcrepe.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+<a href="ramen.html"><img src="food_photos/ramen.jpg" alt="" style="width:400px;height:700px;margin-left:450px;padding:30px;"></a>
+<a href="harajuku.html"><img src="food_photos/crepe1.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;"></a>
+
 <img src="food_photos/egg.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/egg2.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/egg3.jpg" alt=""style="width:850px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/bbq1.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/bbq2.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/bbq3.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/bbq.jpg" alt=""style="width:500px;height:700px;margin-left:400px;">
-<img src="food_photos/bbq5.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
-<img src="food_photos/bbq7.gif" alt=""style="width:500px;height:800px;margin-left:400px;padding:30px;">
+
+<img src="food_photos/bbq.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+
+<img src="food_photos/noodle.jpg" alt=""style="width:900px;height:700px;margin-left:220px;padding:30px;">
+
 
 
 		</div>
