--- a/jkace/two.html
+++ b/jkace/two.html
@@ -50,6 +50,11 @@ h2{
 
 <img src="food_photos/noodle.jpg" alt=""style="width:900px;height:700px;margin-left:220px;padding:30px;">
 
+<img src="food_photos/friedchicken.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+
+<img src="food_photos/kimchi.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
+
+<img src="food_photos/koreansushi.jpg" alt=""style="width:500px;height:700px;margin-left:400px;padding:30px;">
 
 
 		</div>
